Trying to fix chrome scrollbar issue

--- a/styles/testStyles.css
+++ b/styles/testStyles.css
@@ -6,6 +6,10 @@
     background-color: rgba(0, 0, 0, 0.3);
     box-shadow: 3px 3px 15px 3px;
     border-radius: 10px;
+}
+
+.test-container::-webkit-scrollbar{
+    display: none;
     overflow: hidden;
 }
 
